fixed the buttons z-index

--- a/resources/dave/ui/sass/picker.scss
+++ b/resources/dave/ui/sass/picker.scss
@@ -40,6 +40,7 @@ div.picker {
     background-color: #2A58CD;
     padding: 10px;
     border-radius: 30px;
+    z-index: 1;
   }
 }
 
